# nvsmi

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: get_pinfor.h  gui.h  infor.h  nvsmi.h
src/: get_pinfor.cpp  gui.cpp  infor.cpp  nvsmi.cpp
